--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="{% static 'jobs/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'jobs/favicon.ico' %}" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
