--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -27,9 +27,10 @@
   
   <body>
     <header class="site-header">
-      <!-- <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark"> -->
+      <!-- Navigation bar -->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
+          <!-- Logo -->
           <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
             ><img
               src="{% static 'media/axiom_logo_no_bg.webp' %}"
@@ -48,6 +49,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
+            <!-- NavBar Left Side -->
             <div class="navbar-nav me-auto">
               <a
                 class="nav-item nav-link {% block nav_home%}{% endblock %}"
@@ -72,6 +74,7 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
+              <!-- Only shows if user logged in -->
               {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'job-create' %}"
                 >Post New Job</a
@@ -95,7 +98,8 @@
       </nav>
     </header>
 
-    <main role="main" class="">
+    <main>
+      <!-- Displays messages that are passed from views -->
       {% if messages %} {% for message in messages %}
       <div class="alert alert-{{ message.tags }} text-center">
         {{ message }}
@@ -107,7 +111,6 @@
     </main>
 
     <footer class="foot">
-
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
@@ -165,6 +168,26 @@
             </div>
           </div>
         </nav>
+        <div class="social text-center">
+            <a
+            href="https://www.linkedin.com/company/axiom-partners/"
+            class="fa-brands fa-linkedin fa-xl"
+            target="_blank"> </a>
+            <a
+            href="https://www.twitter.com"
+            class="fa-brands fa-x-twitter fa-xl"
+            target="_blank"> </a>
+            <a
+            href="https://www.instagram.com"
+            class="fa-brands fa-instagram fa-xl"
+            target="_blank"> </a>
+        </div>
+        <div class="py-2 text-center">
+          <p>
+           31 Molesworth Street, Dublin, Ireland 
+          </p>
+          
+        </div>
 
     </footer>
 
