--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -53,7 +53,7 @@
   </div>
 
   <div class="row gx-1 gy-5">
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
         <img
           src="{% static 'media/axiom_recruitment.webp' %}"
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
         <img
           src="{% static 'media/axiom_grow.webp' %}"
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
         <img
           src="{% static 'media/axiom_ma.webp' %}"
@@ -127,7 +127,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
         <img
           src="{% static 'media/axiom_consultant.webp' %}"
@@ -153,7 +153,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
         <img
           src="{% static 'media/axiom_client.webp' %}"
@@ -178,7 +178,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
         <img
           src="{% static 'media/axiom_expertise.webp' %}"
