--- a/jobs/templates/jobs/job_detail.html
+++ b/jobs/templates/jobs/job_detail.html
@@ -1,4 +1,5 @@
-{% extends "jobs/base.html" %} {% block content %}
+{% extends "jobs/base.html" %} 
+{% block content %}
 
 <div class="container media content-section mb-5">
   <div class="media-body">
@@ -21,11 +22,14 @@
     </div>
     <div class="text-muted job-metadata row py-1">
       <small class="col">Salary: {{ object.salary }}</small>
-      <small class="col text-end">Job Type: <strong class="jobtype">{{ object.job_type }}</strong></small>
+      <small class="col text-end">
+        Job Type: <strong class="jobtype">{{ object.job_type }}</strong>
+      </small>
     </div>
   </div>
  
   {% if object.creator == user or user.is_staff %}
+
   <div class="container">
     <a
       class="btn btn-success btn-sm mt-1 mb-1"
@@ -40,6 +44,5 @@
   </div>
   {% endif %}
 </div>
-
 
 {% endblock content %}
