--- a/jobs/templates/jobs/job_form.html
+++ b/jobs/templates/jobs/job_form.html
@@ -2,17 +2,16 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section container">
-    <!--  method POST sends form data to view-->
     <form method="POST">
-        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Job Posting</legend>
-            <!-- display django standard UserCreationForm -->
         {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-success" type="submit">Post Job</button>
+            <button class="btn btn-outline-success" type="submit">
+                Post Job
+            </button>
         </div>
     </form>
    </div>
