--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,14 +1,12 @@
 {% extends "jobs/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+
    <div class="content-section">
-    <!--  method POST sends form data to view-->
     <form method="POST">
-        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Log In</legend>
-            <!-- display django standard UserCreationForm -->
         {{ form|crispy }}
         </fieldset>
         <div class="form-group">
@@ -17,7 +15,9 @@
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need An Account?<a href="{% url 'register' %}" class="ml-2">Sign Up Now</a>
+            Need An Account?
+            <a href="{% url 'register' %}" class="ml-2">
+                Sign Up Now</a>
         </small>
     </div>
    </div>
