--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -4,7 +4,10 @@
    <h2>You have been Logged out</h2>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account?<a href="{% url 'login' %}">Log In Again</a>
+            Already have an account?
+            <a href="{% url 'login' %}">
+                Log In Again
+            </a>
         </small>
     </div>
 {% endblock content %}
