--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,7 +5,9 @@
 <div class="container">
     <div class="content-section">
         <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+        <img 
+            class="rounded-circle account-img"
+            src="{{ user.profile.image.url }}">
         <div class="media-body">
             <h2 class="account-heading">{{ user.username }}</h2>
             <p class="text-secondary">{{ user.email }}</p>
@@ -23,7 +25,9 @@
             {{ profile_form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-success" type="submit">Update</button>
+            <button class="btn btn-outline-success" type="submit">
+                Update
+            </button>
         </div>
     </form>
     </div>
