--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,22 +2,24 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
-    <!--  method POST sends form data to view-->
     <form method="POST">
-        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Register Today</legend>
-            <!-- display django standard UserCreationForm -->
         {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Register</button>
+            <button class="btn btn-outline-info" type="submit">
+                Register
+            </button>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account?<a href="{% url 'login' %}" class="ml-2">Sign In</a>
+            Already have an account?
+            <a href="{% url 'login' %}" class="ml-2">
+                Sign In
+            </a>
         </small>
     </div>
    </div>
