--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -5,7 +5,7 @@
 <section class="home-hero container-fluid bglight p-5 mb-5">
   <div class="home-hero-title-cont row justify-content-center">
     <div class="home-hero-title col-6">
-      <h2>Our Current Job Openings</h2>
+      <h2>Our Current Job Opportunities</h2>
     </div>
   </div>
 </section>
