--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -2,7 +2,7 @@
 {% extends "jobs/base.html" %}
 {% block content %}
    <h2>You have been Logged out</h2>
-    <div class="border-top pt-3">
+    <div class="border-top pt-3 mb-5">
         <small class="text-muted">
             Already have an account?
             <a href="{% url 'login' %}">
