--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,7 +9,7 @@
         {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">
+            <button class="btn btn-outline-success" type="submit">
                 Register
             </button>
         </div>
