--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{% static 'jobs/favicon.ico' %}" type="image/x-icon">
     <link rel="icon" href="{% static 'jobs/favicon.ico' %}" type="image/x-icon">
     <link
@@ -11,12 +11,12 @@
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
-    />
+    >
     <link
       type="text/css"
       rel="stylesheet"
       href="{% static 'jobs/css/style.css' %}"
-    />
+    >
 
     {% if title %}
     <title>Axiom | {{ title }}</title>
@@ -35,8 +35,8 @@
             ><img
               src="{% static 'media/axiom_logo_no_bg.webp' %}"
               alt="axiom logo"
-              width="250px"
-          /></a>
+              width="250"
+          ></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -117,20 +117,20 @@
               ><img
                 src="{% static 'media/axiom_logo_no_bg.webp' %}"
                 alt="axiom logo"
-                width="250px"
-            /></a>
+                width="250"
+            ></a>
             <button
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#navbarToggle"
-              aria-controls="navbarToggle"
+              data-bs-target="#navbarToggle2"
+              aria-controls="navbarToggle2"
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="collapse navbar-collapse" id="navbarToggle2">
               <div class="navbar-nav me-auto">
                 <a class="nav-item nav-link" href="{% url 'jobs-home' %}"
                   >Home</a
