Fixed some html w3c info issues

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -27,7 +27,7 @@
         bridge between talented individuals looking for opportunities and
         companies in need of skilled professionals. We work with clients across
         Ireland and the UK. Our main areas of expertise are Financial Services,
-        Accountancy, IT and Medical Services. <br />
+        Accountancy, IT and Medical Services.
       </p>
 
       <p>
@@ -58,8 +58,8 @@
         <img
           src="{% static 'media/axiom_recruitment.webp' %}"
           class="card-img-top"
-          alt="..."
-        />
+          alt="Old door with Employees written above it"
+        >
         <div class="card-body">
           <h5 class="card-title text-center">Recruitment</h5>
           <p class="card-text">
@@ -83,8 +83,8 @@
         <img
           src="{% static 'media/axiom_grow.webp' %}"
           class="card-img-top"
-          alt="..."
-        />
+          alt="Passion led us here written on ground"
+        >
         <div class="card-body">
           <h5 class="card-title text-center">Growing your business</h5>
           <p class="card-text">
@@ -108,8 +108,8 @@
         <img
           src="{% static 'media/axiom_ma.webp' %}"
           class="card-img-top"
-          alt="..."
-        />
+          alt="Money"
+        >
         <div class="card-body">
           <h5 class="card-title text-center">Acquisitions And Mergers</h5>
           <p class="card-text">
@@ -132,8 +132,8 @@
         <img
           src="{% static 'media/axiom_consultant.webp' %}"
           class="card-img-top"
-          alt="..."
-        />
+          alt="Laptop on desk"
+        >
         <div class="card-body">
           <h5 class="card-title text-center">Become and Axiom Consultant</h5>
           <p class="card-text">
@@ -158,8 +158,8 @@
         <img
           src="{% static 'media/axiom_client.webp' %}"
           class="card-img-top"
-          alt="..."
-        />
+          alt="Man looking up at skyscraper"
+        >
         <div class="card-body">
           <h5 class="card-title text-center">Become an Axiom Client</h5>
           <p class="card-text">
@@ -183,8 +183,8 @@
         <img
           src="{% static 'media/axiom_expertise.webp' %}"
           class="card-img-top"
-          alt="..."
-        />
+          alt="From the real experts written on side of book"
+        >
         <div class="card-body">
           <h5 class="card-title text-center">Our focus sectors</h5>
           <p class="card-text">
