annotation of code

--- a/jobs/templates/jobs/contact.html
+++ b/jobs/templates/jobs/contact.html
@@ -1,8 +1,10 @@
 {% extends "jobs/base.html" %} 
 {% load static %} 
+<!-- Inserts active class back into base.html navbar -->
 {% block nav_contact%}active{% endblock %} 
 {% block content %}
 
+<!-- Contact Hero -->
 <section class="home-hero container-fluid bglight p-5">
   <div class="home-hero-title-cont row justify-content-center">
     <div class="home-hero-title col-6">
@@ -17,6 +19,7 @@
   </div>
 </section>
 
+<!-- Contact Form -->
 <section class="container-fluid py-4" id="contact">
   <h1 class="text-center">Contact us</h1>
   <h2 class="text-center">For a confidential chat</h2>
