--- a/jobs/templates/jobs/job_confirm_delete.html
+++ b/jobs/templates/jobs/job_confirm_delete.html
@@ -1,7 +1,9 @@
 {% extends "jobs/base.html" %}
 {% block content %}
    <div class="content-section">
+    <!-- Confirm delete form -->
     <form method="POST">
+        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Delete Job</legend>
