--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -1,7 +1,9 @@
-{% extends "jobs/base.html" %} 
+{% extends "jobs/base.html" %}
+<!-- Inserts active class back into base.html navbar -->
 {% block nav_postings%}active{% endblock %} 
 {% block content %}
 
+<!-- Postings hero -->
 <section class="home-hero container-fluid bglight p-5 mb-5">
   <div class="home-hero-title-cont row justify-content-center">
     <div class="home-hero-title col-6">
@@ -10,6 +12,7 @@
   </div>
 </section>
 
+<!-- Job listing cards loop -->
 {% for job in jobs %}
 
 <div class="container media content-section col-9">
@@ -43,7 +46,7 @@
 </div>
 
 {% endfor %} {% if is_paginated %}
-
+<!-- Pagination -->
 <div class="text-center">
   {% if page_obj.has_previous %}
   <a
