--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -1,8 +1,10 @@
 {% extends "jobs/base.html" %}
 {% load static %}
+<!-- Inserts active class back into base.html navbar -->
 {% block nav_services%}active{% endblock %} 
 {% block content %}
 
+<!-- Service Hero -->
 <section class="home-hero container-fluid bglight p-5 mb-3">
   <div class="home-hero-title-cont row justify-content-center">
     <div class="home-hero-title col-6">
@@ -11,6 +13,7 @@
   </div>
 </section>
 
+<!-- Detailed Services Section Cards -->
 <section class="services py-5">
   <div class="container-lg row gx-3 gy-5 mx-auto">
     <div class="col-lg-6">
