--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,6 +1,7 @@
 <!-- inherit from base template -->
 {% extends "jobs/base.html" %}
 {% block content %}
+<!-- Logged out message page -->
    <h2>You have been Logged out</h2>
     <div class="border-top pt-3 mb-5">
         <small class="text-muted">
