--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -2,22 +2,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Axiom Consultants recruitment company in Dublin, Ireland">
+    <meta name="keywords" content="recruitment, ireland, candidate, insurance, wealth management, medical services, mergers, acquisitions, accountancy, compliance, technology, jobs, vacancies">
     <link rel="shortcut icon" href="{% static 'jobs/favicon.ico' %}" type="image/x-icon">
     <link rel="icon" href="{% static 'jobs/favicon.ico' %}" type="image/x-icon">
+    <!-- Bootstrap CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     >
+    <!-- Stylesheet -->
     <link
       type="text/css"
       rel="stylesheet"
       href="{% static 'jobs/css/style.css' %}"
     >
-
+    <!-- takes individual template heading from views -->
     {% if title %}
     <title>Axiom | {{ title }}</title>
     {% else %}
@@ -87,6 +92,7 @@
               >
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
+              <!-- shows if user not logged in -->
               <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
               <a class="nav-item nav-link" href="{% url 'register' %}"
                 >Register</a
@@ -106,10 +112,11 @@
       </div>
       {% endfor %} 
       {% endif %} 
+      <!-- templates start here -->
       {% block content %}
       {% endblock %}
     </main>
-
+    <!-- Footer includes navigation, social links and address -->
     <footer class="foot">
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
@@ -190,7 +197,7 @@
         </div>
 
     </footer>
-
+    <!-- Bootstrap scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -201,6 +208,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <!-- fontawsome script -->
     <script
       src="https://kit.fontawesome.com/67c1c04fa5.js"
       crossorigin="anonymous"
