--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,8 +1,10 @@
 {% extends "jobs/base.html" %} 
 {% load static %} 
+<!-- Inserts active class back into base.html navbar -->
 {% block nav_home%}active{% endblock %} 
 {% block content %}
 
+<!-- Hero Section -->
 <section class="home-hero container-fluid bglight p-5">
   <div class="home-hero-title-cont row justify-content-start">
     <div class="home-hero-title col-6 mx-auto">
@@ -17,7 +19,9 @@
   </div>
 </section>
 
+<!-- Company & services intro section -->
 <section class="home-services container-fluid mx-auto py-3">
+  <!-- Company intro -->
   <div class="mx-5 my-5">
     <h2 class="text-center pb-3">Partner with Axiom</h2>
     <div>
@@ -51,7 +55,7 @@
       </p>
     </div>
   </div>
-
+  <!-- Service intro cards -->
   <div class="row gx-1 gy-5">
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card px-0">
