--- a/jobs/templates/jobs/job_form.html
+++ b/jobs/templates/jobs/job_form.html
@@ -1,8 +1,10 @@
 {% extends "jobs/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<!-- Post new job form -->
 <div class="content-section container">
     <form method="POST">
+        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Job Posting</legend>
