--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,9 +1,10 @@
 {% extends "jobs/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-
+<!-- Login page -->
    <div class="content-section container">
     <form method="POST">
+        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Log In</legend>
