--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,6 +2,7 @@
 {% block nav_profile%}active{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
+<!-- Forms to update profile -->
 <div class="container">
     <div class="content-section">
         <div class="media">
