--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,8 +1,10 @@
 {% extends "jobs/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<!-- form to register new user -->
 <div class="content-section container">
     <form method="POST">
+        <!-- CSRF token required for security -->
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Register Today</legend>
