corrected media directory location

--- a/jobs/templates/jobs/job_form.html
+++ b/jobs/templates/jobs/job_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <!-- Post new job form -->
-<div class="content-section container">
+<div class="container content-section">
     <form method="POST">
         <!-- CSRF token required for security -->
         {% csrf_token %}
